--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,6 +58,10 @@ h4.fieldLabel {
     width: 150px;
 }
 
+.table-va-middle td {
+    vertical-align: middle!important;
+}
+
 /* ==========================================================================
    Bootstrap Overrides
    ========================================================================== */
