--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,10 +50,10 @@ h4.fieldLabel {
     width: 100%;
     overflow-x: scroll;
 }
-.table-fixed-layout-large {
+.layout-large {
     width: 1800px;
 }
-.table-fixed-layout-large th {
+.layout-large th {
     width: 150px;
 }
 
