Test banner amendments
Changed css file name

--- a/public/css/main-test.css
+++ b/public/css/main-test.css
@@ -1,6 +1,5 @@
-
 /* ==========================================================================
-   Test Banner Styling
+   Test Styling
    ========================================================================== */
 
 #testing-banner {
