Revert "Test banner amendments"
This reverts commit 2a055181c3826c0bab992a39fc025c5b2d2b01de.

--- a/public/css/test-banner.css
+++ b/public/css/test-banner.css
@@ -1,5 +1,6 @@
+
 /* ==========================================================================
-   Test Styling
+   Test Banner Styling
    ========================================================================== */
 
 #testing-banner {
