Banner colour change
From red to blue

--- a/public/css/main-test.css
+++ b/public/css/main-test.css
@@ -5,7 +5,7 @@
 #testing-banner {
     top: 0;
     position:fixed;
-    background-color:red;
+    background-color:#3cadd4;
     height:24px;
     width: 100%;
     z-index:2;
