--- a/public/css/main.css
+++ b/public/css/main.css
@@ -189,9 +189,12 @@ ol.breadcrumb li {
     color: #F0F0F0;
     padding:10px;
 }
-.collapse-form-group, .collapse-form-input {
+.collapse-form-input {
     width: 100% !important;
 }
 .collapse-form-label {
     line-height: 30px;
+}
+.collapse-form-group {
+    margin-bottom: 10px !important;
 }
