--- a/public/css/main.css
+++ b/public/css/main.css
@@ -297,3 +297,30 @@ input[type="range"]::-ms-thumb {
 .btn-bottom-margin {
     margin-bottom: 10px;
 }
+
+iframe#email-prev {
+    width: 100%;
+    height: 60vh;
+    border: none;
+}
+
+.colorSelectorBlock {
+    position: relative;
+    width: 36px;
+    height: 36px;
+    background: url(/image/colorpicker/select.png);
+    display: inline;
+}
+
+.colorSelectorBlock div {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 30px;
+    height: 30px;
+    background: url(/image/colorpicker/select.png) center;
+}
+
+.colorSelectorReset {
+    margin-left: 50px;
+}
