--- a/public/css/initialise.main.css
+++ b/public/css/initialise.main.css
@@ -10,8 +10,29 @@
     box-shadow: 0 0 5px #29ABE2;
 }
 
+.slider-range {
+    background: #29ABE2;
+}
+
 .noUi-value-large {
     margin-top: 8px;
+}
+
+.deposit-container {
+    padding: 50px 0;
+}
+
+.deposit-container .slider-range{
+    margin-top: 8px;
+}
+
+@media screen and (max-width: 767px) {
+    .deposit-slider-container {
+        margin-top: 36px;
+    }
+    .deposit-container {
+        padding: 20px 0 50px 0;
+    }
 }
 
 div.container {
