Open/Close Chevrons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -460,3 +460,11 @@ td.has-feedback i {
         transform: rotate(360deg);
     }
 }
+
+[data-toggle="collapse"].collapsed .if-not-collapsed {
+    display: none;
+}
+
+[data-toggle="collapse"]:not(.collapsed) .if-collapsed {
+    display: none;
+}
