--- a/public/css/main.css
+++ b/public/css/main.css
@@ -168,7 +168,7 @@ ol.breadcrumb li {
         margin-bottom: 10px;
     }
 }
-.datepicker-spacing {
+.filter-spacing {
     min-width: 100px;
 }
 .lg-font-btn {
